--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/stack": "^7.6.7",
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-gesture-handler": "^2.29.1",
